// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a div 1`] = `
<div
  className="sc-bdVaJa dUrZZD"
>
  Hello
</div>
`;

exports[`Alert should render with ui: success 1`] = `
<div
  className="sc-bdVaJa AFNnC"
>
  Hello
</div>
`;
